2001-05-09  Elliot Glaysher  <nuriko.chan@home.com>

	* gtkcomics: various random changes as I head towards a program 
	that works...
	* Netcomics/Factory.pm (init): Renamed to (setup);
	(new): Moved responsibility of reloading RLI files and populating
	$self->{'hof'} here, so duplication of work is minimalized == faster
	startups.
	* netcomics: fixed so it'll work with the new layout to Netcomics/
	Factory.pm. 
	* Netcomics/Config.pm.in (clear_date_settings): added function that
	should (in theory) reset date settings.
	* Changelog: corrected visual layout in one of my earlier entries.
	
2001-05-06  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/GtkComics.pm: Small tweaks to the List widget.
	* gtkcomics: gtkcomic's list of comics no longer has ${proc} on
	the list. This forced me to change my solution to lookup of the
	proc.
	* GtkComics.pm, gtkcomics: On second thought, we don't really need
	the days behind either...
	
2001-05-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (.PHONY): Updated to include all phony targets
	(AP4NAME): Added gktcomic
	(PERLMODULES): Added GtkComics.pm

2001-05-01  Elliot Glayhser  <nuriko.chan@home.com>

	* gtkcomic, Netcomics/Gtkcomics.pm: Initial checkin. Please note
	that in there current state there's minimal funcionality, with
	the exception of listing comics. It's good at that.
	
2001-04-29  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (init): Made it so that the same Factory
	instance can be reused for download different sets of comics.
	(comic_names): Extracted the functionality out of list_comics that
	builds a hash of the comic ids & days behind, indexed by name.
	* Makefile (POD2MANRULES,POD2HTMLRULES): Added these rules to
	produce the manpages & html pages for the pod files.  Generalized
	the rules for producing man & html pages.
	(remake_check): Changed to simply run make distclean to remove the
	files that need to be regenerated.
