@@ -1,4 +1,4 @@
-#-*-mode: Perl; tab-width: 4 -*-
+#-*- tab-width: 4 -*-
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
