@@ -1,4 +1,4 @@
-#-*-mode: Perl; tab-width: 4 -*-
+#-*- tab-width: 4 -*-
 #---------------------------------------------------------------------
 # This module creates the interface for Comic Page.
 #---------------------------------------------------------------------
